--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <div id="app"></div>
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
